# LP-Core

./: .dockerignore  .env  .env.example  .env.staging  .gitignore  .pre-commit-config.yaml  Dockerfile.prod  README.md  all_local.yml  docker-compose.yml  local.yml  mapping.json  nginx.conf  package-lock.json  package.json  production.yml  production_all_local.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: backend_tests.yml  docker.yml  lint_and_format.yml  playwright.yml  production_release.yml  release.yml  staging_release.yml
backend/: Dockerfile  Dockerfile.local  Dockerfile.prod  conftest.py  initial_data.json  manage.py  pytest.ini  requirements.txt  startup.sh
backend/apps/authentication/: serializers.py  tests.py  urls.py  views.py
backend/apps/authentication/tests/: test_authentication.py
backend/apps/connector/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/connector/migrations/: 0001_initial.py
backend/apps/connector/utils/: decorator.py  error_handler.py
backend/apps/monitoring/: models.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/apps/monitoring/migrations/: 0001_initial.py  0002_alter_eventlog_requested_url_alter_eventlog_status.py  0003_eventlog_type.py  0004_eventlog_dataspace.py
backend/apps/monitoring/utils/: analytics.py  logging.py
backend/apps/search/: serializers.py  tests.py  urls.py  views.py
backend/apps/search/utils/: elasticsearch.py
backend/apps/user/: models.py
backend/apps/user/migrations/: 0001_initial.py
backend/common/edpuploader/: __init__.py  elastic_edp.py  s3_edp_storage.py
backend/daseen/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
backend/user/: admin.py  models.py  serializers.py
backend/user/migrations/: 0001_initial.py  0002_alter_dataspace_name.py  0002_userprofile_delete_user.py  0003_remove_userprofile_dataspace_userprofile_dataspaces.py
daseen/: .env.example  .gitignore  Dockerfile.local  package-lock.json  package.json  playwright.config.js
daseen/.github/workflows/: playwright.yml
daseen/backend/: README.md
daseen/daseen/: asgi.py  settings.py  urls.py  wsgi.py
daseen/frontend/: README.md
daseen/public/: index.html
daseen/src/: App.js  i18n.js  index.css
daseen/src/modules/search_engine/: index.js
daseen/tests/: search.spec.js
elastic/: edp_data_mapping.json  edp_data_schema_mapping.json
frontend/: .env.example  Dockerfile.local  Dockerfile.prod  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.cjs  playwright.config.js  playwright.config.mjs  vite.config.js
frontend/playwright-report/: index.html
frontend/public/: index.html
frontend/src/: App.js  App.jsx  i18n.js  index.css  index.js  main.jsx
frontend/src/api/: elastic.js
frontend/src/components/: Footer.jsx
frontend/src/components/Filters/: Filters.jsx
frontend/src/components/Header/: Header.jsx  Header.module.css
frontend/src/components/Results/: ResultItem.jsx  Results.jsx  Results.module.css
frontend/src/components/Search/: MainSearchBar.jsx  SearchBar.jsx  SearchBar.module.css  SearchSuggestions.jsx
frontend/src/components/widgets/: Paginator.jsx
frontend/src/layouts/: AppLayout.jsx  LandingLayout.jsx
frontend/src/modules/admin_panel/: index.jsx
frontend/src/modules/authentication/: index.jsx
frontend/src/modules/bookmarks/: index.js  index.jsx
frontend/src/modules/dataset/: index.jsx
frontend/src/modules/help/: index.jsx
frontend/src/modules/home/: index.js
frontend/src/utils/: filter_utils.js
frontend/tests/: bookmarks.spec.js  home.spec.js  search.spec.js
landing/: Dockerfile.local  Dockerfile.prod  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
landing-page/: README.md
landing/src/: App.js  App.jsx  i18n.js  index.css  index.js  main.jsx
landing/src/api/: config.js  elastic.js  http.js
landing/src/components/: AnimatedNumber.jsx  Categories.jsx  LanguageSelector.jsx
landing/src/layouts/: AppLayout.jsx
landing/src/pages/: About.jsx  Landing.jsx  ToggleEnglishAndRedirect.jsx  ToggleGermanAndRedirect.jsx
landing/src/utils/: categories.js  categories.jsx  dataspaces.js
nginx/: Dockerfile  default.conf
public/: index.html
src/: App.js  i18n.js  index.css  index.js
src/components/Filters/: Filters.jsx  Filters.module.css
src/components/Header/: Header.jsx  Header.module.css
src/components/Results/: ResultItem.jsx  Results.jsx  Results.module.css
src/components/Search/: MainSearchBar.jsx  SearchBar.jsx  SearchSuggestions.jsx
src/modules/dataset/: index.js
src/modules/home/: index.js
src/modules/search_engine/: index.js
src/pages/DatasetDetails/: AttributeConsistency.jsx  DatasetDetails.jsx  TemporalConsistency.jsx
src/pages/Home/: Home.jsx
src/utils/: bookmarks.js  dataset_utils.js
tests/: bookmarks.spec.js  home.spec.js  search.spec.js
(+366 files in other folders)
