[project]
name = "daseen"
version = "0.1.0"
description = "Daseen"
readme = "README.md"
authors = [
    { name = "Kai Buschulte", email = "kb@beebucket.de" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.13",
    "django>=5.0.6",
    "django-cors-headers>=4.3.1",
    "django-rest-framework>=0.1.0",
    "djangorestframework-simplejwt>=5.3.1",
    "drf-nested-routers>=0.94.1",
    "drf-yasg>=1.21.8",
    "elasticsearch>=8.17.1",
    "extended_dataset_profile @ git+https://github.com/Beebucket/extended_dataset_profile@v0.1.0",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.4",
    "pymemcache>=4.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest-django>=4.9.0",
    "ruff>=0.9.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "I", # isort replacement
    "S", # bandit
]

[tool.ruff.lint.per-file-ignores]
"backend/**/tests.py" = ["S101", "S106"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
DJANGO_SETTINGS_MODULE = "daseen.settings"
# -- recommended but optional:
python_files = ["backend/**/tests.py"]

[tool.coverage.run]
relative_files = true
